# pyAFQ

./: .buildinfo  .codespellrc  .gitignore  .pre-commit-config.yaml  CHANGES.rst  NOTICE.md  README.md  bib.html  genindex.html  guides_index.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html
.github/workflows/: docbuild.yml  docker_pyafq.yml  docker_pyafq_cuda12.yml  nightly_anisotropic_test.yml  nightly_basic_test.yml  nightly_custom_test.yml  nightly_pft_test.yml  nightly_reco_test.yml  (+4 more)
.maintenance/: update_zenodo.py
AFQ/: _fixes.py  _references.bib  registration.py
_modules/: AFQ.html  index.html
_sources/: bib.rst.txt  index.rst.txt  sg_execution_times.rst.txt
developing/: contributing.html  definitions.html  index.html  releasing.html  tasks.html
docs/: Makefile
explanations/: bundle_orientation.html  index.html  modeling.html  profiling.html  recognition.html  tractography.html  tractometry_pipeline.html  whats_new_3.html
gpu_docker/: Dockerfile  cuda_track_template.def  pyafq_with_gpu_template.def
howto/: cite.html  cleaning_params.html  contributing.html  converter.html  data.html  docker.html  getting_help.html  image.html  index.html  installation_guide.html  rerun.html  scalars.html  segmentation_params.html  singularity.html  tractography_params.html
pyafq_docker/: Dockerfile
reference/: bundledict.html  config.html  fibertracts.html  index.html  kwargs.html  mapping.html  methods.html  tissue_properties.html  viz_backend.html
tutorials/: index.html
(+520 files in other folders)
