[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm>=3.4"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "nightly",
    "nightly_basic",
    "nightly_anisotropic",
    "nightly_reco",
    "nightly_reco80",
    "nightly_custom",
    "nightly",
]

[tool.setuptools_scm]
write_to = "AFQ/version.py"
